# system-monitor-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: collector.rs  commands.rs  lib.rs  main.rs  types.rs
src/components/: ContextMenu.tsx  DragHandle.tsx  MetricRow.tsx  ProcessList.tsx  SpectrumBars.tsx
src/hooks/: useFps.ts  useSystemInfo.ts
tests/components/: MetricRow.test.tsx  ProcessList.test.tsx
