[package]
name = "system-monitor"
version = "1.0.0"
edition = "2021"

[lib]
name = "system_monitor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
